@@ -12,6 +12,8 @@ What's New in Python 2.6 alpha 2?
 Core and builtins
 -----------------
 
+- Issue #2400: Allow relative imports to "import *".
+
 - Issue 1745.  Backport print function with:
    from __future__ import print_function
 
